# OOP-cpp-exercise

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  a.out  main.cpp  pessoa.cpp  pessoa.h  professor.cpp  professor.h
src/: main.cpp  person.cpp  person.hpp  professor.cpp  professor.hpp  scholar.cpp  scholar.hpp  student.cpp  student.hpp
